--- a/reactportfolio/index.html
+++ b/reactportfolio/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Your Portfolio</title>
+    <title>Donna Burns</title>
     <!-- Import Montserrat font from Google Fonts -->
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap"
@@ -12,7 +12,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <!-- Ensure this path is correct -->
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
